Parse json string using the jsmn library

--- a/GASconfig.json
+++ b/GASconfig.json
@@ -2,7 +2,7 @@
     "rooms": [
         {
             "id": 0,
-            "name": "Bedroom of me",
+            "name": "My Bedroom",
             "nodes": [
                 {
                     "id": 0,
