Import configuration from JSON file

--- a/GASconfig.json
+++ b/GASconfig.json
@@ -20,6 +20,15 @@
                             "posY": 1
                         }
                     ]
+                },
+                {
+                    "id": 1,
+                    "sensors": [
+                        {
+                            "type": 3
+                        }
+                    ],
+                    "actuators": []
                 }
             ]
         }
