Automate application testing

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/cJSON"]
 	path = lib/cJSON
 	url = https://github.com/DaveGamble/cJSON.git
+[submodule "sims"]
+	path = sims
+	url = https://github.com/SINF-FEUP/SINFSimulators.git
