Import actuators to rule structure

--- a/GASconfig.json
+++ b/GASconfig.json
@@ -30,7 +30,14 @@
                             "type": 3
                         }
                     ],
-                    "actuators": []
+                    "actuators": [
+                        {
+                            "id": 10,
+                            "type": 0,
+                            "posX": 10,
+                            "posY": 2
+                        }
+                    ]
                 }
             ],
             "rules": [
@@ -38,13 +45,13 @@
                     "type": 0,
                     "value": 10,
                     "sensors": ["0.0"],
-                    "actuators": [0],
+                    "actuators": ["0.0"],
                     "childs": [
                         {
                             "type": 1,
                             "value": 40,
                             "sensors": ["0.1"],
-                            "actuators": [0],
+                            "actuators": ["0.0"],
                             "childs": []
                         }
                     ]
@@ -53,13 +60,13 @@
                     "type": 0,
                     "value": 5,
                     "sensors": ["1.3"],
-                    "actuators": [0],
+                    "actuators": ["1.10"],
                     "childs": [
                         {
                             "type": 1,
                             "value": 20,
                             "sensors": ["1.3"],
-                            "actuators": [0],
+                            "actuators": ["0.0"],
                             "childs": []
                         }
                     ]
