--- a/GASconfig.json
+++ b/GASconfig.json
@@ -8,10 +8,14 @@
                     "id": 0,
                     "sensors": [
                         {
-                            "type": 0
+                            "type": 0,
+                            "posX": 0,
+                            "posY": 0
                         },
                         {
-                            "type": 1
+                            "type": 1,
+                            "posX": 0,
+                            "posY": 1
                         }
                     ],
                     "actuators": [
@@ -27,7 +31,9 @@
                     "id": 1,
                     "sensors": [
                         {
-                            "type": 3
+                            "type": 3,
+                            "posX": 1,
+                            "posY": 0
                         }
                     ],
                     "actuators": []
