--- a/GASconfig.json
+++ b/GASconfig.json
@@ -22,8 +22,8 @@
                         {
                             "id": 0,
                             "type": 0,
-                            "posX": 10,
-                            "posY": 1
+                            "posX": 1,
+                            "posY": 0
                         }
                     ]
                 },
@@ -33,12 +33,49 @@
                         {
                             "type": 3,
                             "posX": 1,
-                            "posY": 0
+                            "posY": 1
                         }
                     ],
                     "actuators": []
                 }
             ]
+        }
+    ],
+    "pixels": [
+        {
+            "posX": 0,
+            "posY": 2,
+            "r": 255,
+            "g": 0,
+            "b": 0
+        },
+        {
+            "posX": 1,
+            "posY": 2,
+            "r": 0,
+            "g": 255,
+            "b": 0
+        },
+        {
+            "posX": 2,
+            "posY": 0,
+            "r": 0,
+            "g": 0,
+            "b": 255
+        },
+        {
+            "posX": 2,
+            "posY": 1,
+            "r": 255,
+            "g": 255,
+            "b": 0
+        },
+        {
+            "posX": 2,
+            "posY": 2,
+            "r": 0,
+            "g": 255,
+            "b": 255
         }
     ]
 }
