--- a/GASconfig.json
+++ b/GASconfig.json
@@ -13,9 +13,14 @@
                             "posY": 0
                         },
                         {
-                            "type": 1,
+                            "type": 2,
                             "posX": 0,
                             "posY": 1
+                        },
+                        {
+                            "type": 3,
+                            "posX": 0,
+                            "posY": 2
                         }
                     ],
                     "actuators": [
@@ -24,23 +29,17 @@
                             "type": 0,
                             "posX": 1,
                             "posY": 0
-                        }
-                    ]
-                },
-                {
-                    "id": 1,
-                    "sensors": [
+                        },
                         {
-                            "type": 3,
+                            "id": 1,
+                            "type": 0,
                             "posX": 1,
                             "posY": 1
-                        }
-                    ],
-                    "actuators": [
+                        },
                         {
-                            "id": 10,
+                            "id": 2,
                             "type": 0,
-                            "posX": 10,
+                            "posX": 1,
                             "posY": 2
                         }
                     ]
@@ -52,63 +51,19 @@
                     "value": 10,
                     "sensors": ["0.0"],
                     "actuators": ["0.0"],
-                    "childs": [
-                        {
-                            "type": 1,
-                            "value": 40,
-                            "sensors": ["0.1"],
-                            "actuators": ["0.0"],
-                            "childs": []
-                        }
-                    ]
+                    "childs": []
                 },
                 {
-                    "type": 0,
-                    "value": 5,
-                    "sensors": ["1.3"],
-                    "actuators": ["1.10"],
-                    "childs": [
-                        {
-                            "type": 1,
-                            "value": 20,
-                            "sensors": ["1.3"],
-                            "actuators": ["0.0"],
-                            "childs": []
-                        }
-                    ]
+                    "type": 1,
+                    "value": 10,
+                    "sensors": ["0.2"],
+                    "actuators": ["0.1"],
+                    "childs": []
                 }
             ]
         }
     ],
     "pixels": [
-        {
-            "posX": 0,
-            "posY": 2,
-            "r": 255,
-            "g": 0,
-            "b": 0
-        },
-        {
-            "posX": 1,
-            "posY": 2,
-            "r": 0,
-            "g": 255,
-            "b": 0
-        },
-        {
-            "posX": 2,
-            "posY": 0,
-            "r": 0,
-            "g": 0,
-            "b": 255
-        },
-        {
-            "posX": 2,
-            "posY": 1,
-            "r": 255,
-            "g": 255,
-            "b": 0
-        },
         {
             "posX": 2,
             "posY": 2,
