--- a/GASconfig.json
+++ b/GASconfig.json
@@ -8,6 +8,7 @@
                     "id": 0, 
                     "sensors": [
                         {
+                            "id": 0,
                             "type": 0,
                             "posX": 24,
                             "posY": 1,
@@ -15,6 +16,7 @@
                             "rangeMax": 600
                         },
                         {
+                            "id": 1,
                             "type": 4,
                             "posX": 25,
                             "posY": 1,
@@ -22,6 +24,7 @@
                             "rangeMax": 40
                         },
                         {
+                            "id": 2,
                             "type": 3,
                             "posX": 17,
                             "posY": 4,
@@ -50,29 +53,6 @@
                         }
                     ]
                 }
-            ],
-            "rules": [
-                {
-                    "type": 0,
-                    "value": 1200,
-                    "sensors": ["0.3"],
-                    "actuators": ["0.1","0.2"],
-                    "childs": []
-                },
-                {
-                    "type": 1,
-                    "value": 400,
-                    "sensors": ["0.0"],
-                    "actuators": ["0.0"],
-                    "childs": []
-                },
-                {
-                    "type": 1,
-                    "value": 30,
-                    "sensors": ["0.4"],
-                    "actuators": ["0.0"],
-                    "childs": []
-                }
             ]
         },
         {
@@ -83,6 +63,7 @@
                     "id": 1, 
                     "sensors": [
                         {
+                            "id": 3,
                             "type": 4,
                             "posX": 20,
                             "posY": 6,
@@ -90,6 +71,7 @@
                             "rangeMax": 6
                         },
                         {
+                            "id": 4,
                             "type": 3,
                             "posX": 20,
                             "posY": 10,
@@ -99,36 +81,12 @@
                     ],
                     "actuators": [
                         {
-                            "id": 0,
+                            "id": 3,
                             "type": 4,
                             "posX": 20,
                             "posY": 8
                         }
                     ]
-                }
-            ],
-            "rules": [
-                {
-                    "type": 2,
-                    "value": 0,
-                    "sensors": ["1.4"],
-                    "actuators": ["1.0"],
-                    "childs": [
-                        {
-                            "type": 0,
-                            "value": 800,
-                            "sensors": ["1.3"],
-                            "actuators": ["1.0"],
-                            "childs": []
-                        }
-                    ]
-                },
-                {
-                    "type": 0,
-                    "value": 1200,
-                    "sensors": ["1.3"],
-                    "actuators": ["1.0"],
-                    "childs": []
                 }
             ]
         },
@@ -140,6 +98,7 @@
                     "id": 2, 
                     "sensors": [
                         {
+                            "id": 5,
                             "type": 4,
                             "posX": 24,
                             "posY": 6,
@@ -147,6 +106,7 @@
                             "rangeMax": 6
                         },
                         {
+                            "id": 6,
                             "type": 3,
                             "posX": 24,
                             "posY": 10,
@@ -156,36 +116,12 @@
                     ],
                     "actuators": [
                         {
-                            "id": 0,
+                            "id": 4,
                             "type": 4,
                             "posX": 24,
                             "posY": 8
                         }
                     ]
-                }
-            ],
-            "rules": [
-                {
-                    "type": 2,
-                    "value": 0,
-                    "sensors": ["2.4"],
-                    "actuators": ["2.0"],
-                    "childs": [
-                        {
-                            "type": 0,
-                            "value": 800,
-                            "sensors": ["2.3"],
-                            "actuators": ["2.0"],
-                            "childs": []
-                        }
-                    ]
-                },
-                {
-                    "type": 0,
-                    "value": 1200,
-                    "sensors": ["2.3"],
-                    "actuators": ["2.0"],
-                    "childs": []
                 }
             ]
         },
@@ -197,6 +133,7 @@
                     "id": 3, 
                     "sensors": [
                         {
+                            "id": 7,
                             "type": 4,
                             "posX": 13,
                             "posY": 4,
@@ -204,6 +141,7 @@
                             "rangeMax": 6
                         },
                         {
+                            "id": 8,
                             "type": 0,
                             "posX": 3,
                             "posY": 2,
@@ -213,19 +151,19 @@
                     ],
                     "actuators": [
                         {
-                            "id": 0,
+                            "id": 5,
                             "type": 0,
                             "posX": 4,
                             "posY": 2
                         },
                         {
-                            "id": 1,
+                            "id": 6,
                             "type": 3,
                             "posX": 11,
                             "posY": 10
                         },
                         {
-                            "id": 2,
+                            "id": 7,
                             "type": 3,
                             "posX": 5,
                             "posY": 5
@@ -236,6 +174,7 @@
                     "id": 4, 
                     "sensors": [
                         {
+                            "id": 9,
                             "type": 4,
                             "posX": 9,
                             "posY": 4,
@@ -243,6 +182,7 @@
                             "rangeMax": 6
                         },
                         {
+                            "id": 10,
                             "type": 0,
                             "posX": 8,
                             "posY": 4,
@@ -252,28 +192,12 @@
                     ],
                     "actuators": [
                         {
-                            "id": 3,
+                            "id": 8,
                             "type": 4,
                             "posX": 9,
                             "posY": 3
                         }
                     ]
-                }
-            ],
-            "rules": [
-                {
-                    "type": 1,
-                    "value": 60,
-                    "sensors": ["3.0"],
-                    "actuators": ["3.0"],
-                    "childs": []
-                },
-                {
-                    "type": 2,
-                    "value": 0,
-                    "sensors": ["3.4"],
-                    "actuators": ["3.1","3.2"],
-                    "childs": []
                 }
             ]
         },
@@ -285,6 +209,7 @@
                     "id": 5, 
                     "sensors": [
                         {
+                            "id": 11,
                             "type": 4,
                             "posX": 3,
                             "posY": 7,
@@ -292,6 +217,7 @@
                             "rangeMax": 6
                         },
                         {
+                            "id": 12,
                             "type": 3,
                             "posX": 2,
                             "posY": 7,
@@ -299,6 +225,7 @@
                             "rangeMax": 2000
                         },
                         {
+                            "id": 13,
                             "type": 2,
                             "posX": 1,
                             "posY": 7,
@@ -308,49 +235,18 @@
                     ],
                     "actuators": [
                         {
-                            "id": 0,
+                            "id": 9,
                             "type": 3,
                             "posX": 2,
                             "posY": 6
                         },
                         {
-                            "id": 1,
+                            "id": 10,
                             "type": 2,
                             "posX": 1,
                             "posY": 6
                         }
                     ]
-                }
-            ],
-            "rules": [
-                {
-                    "type": 2,
-                    "value": 0,
-                    "sensors": ["5.4"],
-                    "actuators": ["5.0"],
-                    "childs": [
-                        {
-                            "type": 0,
-                            "value": 800,
-                            "sensors": ["5.3"],
-                            "actuators": ["5.0"],
-                            "childs": []
-                        }
-                    ]
-                },
-                {
-                    "type": 0,
-                    "value": 300,
-                    "sensors": ["5.2"],
-                    "actuators": ["5.1"],
-                    "childs": []
-                },
-                {
-                    "type": 1,
-                    "value": 800,
-                    "sensors": ["5.2"],
-                    "actuators": ["5.1"],
-                    "childs": []
                 }
             ]
         },
@@ -362,6 +258,7 @@
                     "id": 6, 
                     "sensors": [
                         {
+                            "id": 14,
                             "type": 4,
                             "posX": 3,
                             "posY": 11,
@@ -369,6 +266,7 @@
                             "rangeMax": 6
                         },
                         {
+                            "id": 15,
                             "type": 3,
                             "posX": 2,
                             "posY": 11,
@@ -376,6 +274,7 @@
                             "rangeMax": 2000
                         },
                         {
+                            "id": 16,
                             "type": 2,
                             "posX": 1,
                             "posY": 11,
@@ -385,51 +284,178 @@
                     ],
                     "actuators": [
                         {
-                            "id": 0,
+                            "id": 11,
                             "type": 3,
                             "posX": 2,
                             "posY": 10
                         },
                         {
-                            "id": 1,
+                            "id": 12,
                             "type": 2,
                             "posX": 1,
                             "posY": 10
                         }
                     ]
                 }
-            ],
-            "rules": [
+            ]
+        }
+    ],
+    "rules": [
+        {
+            "id": 0,
+            "type": 0,
+            "value": 1200,
+            "sensors": [2],
+            "actuators": [1,2],
+            "childs": []
+        },
+        {
+            "id": 1,
+            "type": 1,
+            "value": 400,
+            "sensors": [0],
+            "actuators": [0],
+            "childs": []
+        },
+        {
+            "id": 2,
+            "type": 1,
+            "value": 30,
+            "sensors": [1],
+            "actuators": [0],
+            "childs": []
+        },
+        {
+            "id": 3,
+            "type": 2,
+            "value": 0,
+            "sensors": [3],
+            "actuators": [3],
+            "childs": [
                 {
-                    "type": 2,
-                    "value": 0,
-                    "sensors": ["6.4"],
-                    "actuators": ["6.0"],
-                    "childs": [
-                        {
-                            "type": 0,
-                            "value": 800,
-                            "sensors": ["6.3"],
-                            "actuators": ["6.0"],
-                            "childs": []
-                        }
-                    ]
-                },
-                {
+                    "id": 4,
                     "type": 0,
-                    "value": 300,
-                    "sensors": ["6.2"],
-                    "actuators": ["6.1"],
-                    "childs": []
-                },
-                {
-                    "type": 1,
                     "value": 800,
-                    "sensors": ["6.2"],
-                    "actuators": ["6.1"],
+                    "sensors": [4],
+                    "actuators": [3],
                     "childs": []
                 }
             ]
+        },
+        {
+            "id": 5,
+            "type": 0,
+            "value": 1200,
+            "sensors": [4],
+            "actuators": [3],
+            "childs": []
+        },
+        {
+            "id": 6,
+            "type": 2,
+            "value": 0,
+            "sensors": [5],
+            "actuators": [4],
+            "childs": [
+                {
+                    "id": 7,
+                    "type": 0,
+                    "value": 800,
+                    "sensors": [6],
+                    "actuators": [4],
+                    "childs": []
+                }
+            ]
+        },
+        {
+            "id": 8,
+            "type": 0,
+            "value": 1200,
+            "sensors": [6],
+            "actuators": [4],
+            "childs": []
+        },
+        {
+            "id": 9,
+            "type": 1,
+            "value": 60,
+            "sensors": [8],
+            "actuators": [5],
+            "childs": []
+        },
+        {
+            "id": 10,
+            "type": 2,
+            "value": 0,
+            "sensors": [7],
+            "actuators": [6,7],
+            "childs": []
+        },
+        {
+            "id": 11,
+            "type": 2,
+            "value": 0,
+            "sensors": [11],
+            "actuators": [9],
+            "childs": [
+                {
+                    "id": 12,
+                    "type": 0,
+                    "value": 800,
+                    "sensors": [12],
+                    "actuators": [9],
+                    "childs": []
+                }
+            ]
+        },
+        {
+            "id": 13,
+            "type": 0,
+            "value": 300,
+            "sensors": [13],
+            "actuators": [10],
+            "childs": []
+        },
+        {
+            "id": 14,
+            "type": 1,
+            "value": 800,
+            "sensors": [13],
+            "actuators": [10],
+            "childs": []
+        },
+        {
+            "id": 15,
+            "type": 2,
+            "value": 0,
+            "sensors": [14],
+            "actuators": [11],
+            "childs": [
+                {
+                    "id": 16,
+                    "type": 0,
+                    "value": 800,
+                    "sensors": [15],
+                    "actuators": [11],
+                    "childs": []
+                }
+            ]
+        },
+        {
+            "id": 17,
+            "type": 0,
+            "value": 300,
+            "sensors": [16],
+            "actuators": [12],
+            "childs": []
+        },
+        {
+            "id": 18,
+            "type": 1,
+            "value": 800,
+            "sensors": [16],
+            "actuators": [12],
+            "childs": []
         }
     ],
     "pixels": [
